# mtg-proxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/: .gitignore  Cargo.toml
backend/examples/: test.rs
backend/src/: bulk_data.rs  database.rs  downloader.rs  env.rs  lib.rs  main.rs  server.rs  util.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: global.css.ts  main.tsx  util.ts
frontend/src/components/App/: App.css.ts  App.tsx
frontend/src/components/CardInput/: CardInput.css.ts  CardInput.tsx
frontend/src/components/CardPreview/: CardPreview.css.ts  CardPreview.tsx
frontend/src/components/Clear/: Clear.css.ts  Clear.tsx
frontend/src/components/Counter/: Counter.css.ts  Counter.tsx
frontend/src/components/Decklist/: Decklist.tsx
frontend/src/components/Export/: Export.css.ts  Export.tsx
frontend/src/components/Import/: Import.css.ts  Import.tsx
frontend/src/components/LocalStorage/: LocalStorage.tsx
frontend/src/components/Print/: Print.css.ts  Print.tsx  worker.ts
frontend/src/components/Split/: Split.css.ts  Split.tsx
frontend/src/components/Status/: Status.tsx
frontend/src/components/common/Button/: Button.css.ts  Button.tsx
frontend/src/components/common/Dialog/: Dialog.css.ts  Dialog.tsx
frontend/src/components/common/Input/: Input.css.ts  Input.tsx
frontend/src/state/: api.ts  index.ts  print.ts  ui.ts
frontend/src/style/: global.css.ts
src/: cache.rs  lib.rs  print.rs  server.rs
wasm/: .gitignore  Cargo.toml
wasm/examples/: test.rs
wasm/src/: lib.rs  print.rs
