[package]
name = "mtg-proxy"
version = "0.1.0"
edition = "2021"
default-run = "backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
axum = { version = "0.7.2", features = ["default", "macros"] }
dotenv = "0.15.0"
env_logger = "0.11.2"
image = "0.24.7"
imageproc = "0.23.0"
log = "0.4.20"
lopdf = { version = "0.32.0", features = ["embed_image"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
