[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.3"
log = "0.4.21"
reqwest = { version = "0.12.3", features = ["json"] }
rmp-serde = "1.2.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "fs",
    "signal",
] }
tokio-util = "0.7.10"
tower-http = { version = "0.5.2", features = ["fs"] }
unicode-normalization = "0.1.23"
