[package]
name = "mtg-print"
version = "0.1.0"
authors = ["Bryan Chen <bryanchen74@gmail.com>"]
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
console_error_panic_hook = { version = "0.1.7", optional = true }
anyhow = "1.0.82"
lopdf = "0.32.0"
image = "0.25.1"
imageproc = "0.24.0"
js-sys = "0.3.69"

[profile.release]
opt-level = "s"
lto = true

[dev-dependencies]
reqwest = { version = "0.12.3", features = ["blocking"] }
